--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <style>
       body { margin-top: 70px; }
-      i, .i { display: inline-block; min-width: 25px; }
+      i, .i {
+        display: inline-block;
+        min-width: 25px;
+        font-size: 20px;
+        color: black;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body ng-controller="MainCtrl">
@@ -34,7 +40,7 @@
         <h1>Font-Awesome 4.2.0 icons <small>from <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">http://fortawesome.github.io/</a></small></h1>
         <div class="row">
           <div class="col-md-2" ng-repeat="icon in fontAwesome | filter:search">
-            <i class="fa" ng-class="icon.name" style="font-size: 20px;"></i> {{icon.name}}
+            <a href="fontAwesomeUrl(icon)" target="fontAwesome"><i class="fa" ng-class="icon.name" style="font-size: 20px;"></i></a> {{icon.name}}
           </div>
         </div>
       </div>
@@ -42,7 +48,7 @@
         <h1>Unicode icons <small>from <a href="http://unicode-table.com/fr/" target="_blank">unicode-table.com</a></small></h1>
         <div class="row">
           <div class="col-md-2" ng-repeat="icon in unicodes | filter:search">
-            <span class="i" style="font-size: 20px;">{{icon.char}}</span> {{icon.html}}
+            <a href="unicodeUrl(icon)" target="unicode" class="i">{{icon.char}}</a> {{icon.html}}
           </div>
         </div>
       </div>
